--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jasur Umarov</title>
+    <title>Web Developer Jasur</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <div id="chat">
+    </div> -->
     <div id="root">
     </div>
   </body>
